Bug 401753 - Creating the Places folder for an existing profile with lots of bookmarks takes too long, the personal toolbar is blank for several seconds. r=sspitzer.